fix: horizontal scroll, minor bugs

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
     margin: 92px auto 0;
     max-width: 1184px;
-    background-image: url(../../images/cover-trains.jpg);
+    background-image: url(../../images/cover/cover-trains.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
