--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,14 +6,14 @@
     grid-template-columns: repeat(auto-fill, minmax(284px,1fr));
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
     .photo-grid {
         max-width: 928px;
         gap: 14px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 970px) {
     .photo-grid{
         margin: 88px 24px 0;
         max-width: 720px;
